--- a/info.plist
+++ b/info.plist
@@ -8,6 +8,7 @@
 	<array>
 		<string>8FBDDAE1-C62C-4543-83B6-8C15BA4E9340</string>
 		<string>78DFB2AD-32FC-4D05-BD15-3F171451A723</string>
+		<string>868E47B2-50D7-427D-8F26-83CB9A71E236</string>
 	</array>
 	<key>uuid</key>
 	<string>D77994BA-32CB-4C7B-B298-A2990C5E1C4D</string>
