added cdata snippet

--- a/info.plist
+++ b/info.plist
@@ -8,6 +8,7 @@
 	<array>
 		<string>8FBDDAE1-C62C-4543-83B6-8C15BA4E9340</string>
 		<string>868E47B2-50D7-427D-8F26-83CB9A71E236</string>
+		<string>44ED78EA-4170-4BCA-9827-65795EE03EA2</string>
 		<string>6F55AF4D-2B33-44A1-9B21-C7CB91B6FC14</string>
 		<string>78DFB2AD-32FC-4D05-BD15-3F171451A723</string>
 	</array>
